--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="input-data.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Input Data</span></a>
             </li>
